[package]
name = "g910-bin"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
description = "Convenience project with command line parameters to control Logitech G910 keyboard"
#documentation = ""
homepage = "https://github.com/oberien/logitech-g910-bin"
repository = "https://github.com/oberien/logitech-g910-bin"
readme = "README.md"
keywords = ["logitech", "g910", "keyboard", "usb", "driver"]
license = "MIT OR Apache-2.0"

[dependencies]
argparse = "*"
g910 = { git = "https://github.com/oberien/logitech-g910-rs", rev = "master"}
g910_handler = { git = "https://github.com/oberien/logitech-g910-handler-rs", rev = "master" }

